@@ -12,6 +12,8 @@
   * XML fragments with namespaces do not raise an exception (regression in 1.4.0)
   * Node#matches? works in nodes contained by a DocumentFragment. GH #158
   * Document should not define add_namespace() method. GH #169
+  * XPath queries returning namespace declarations do not segfault.
+  * Node#replace works with nodes from different documents. GH #162
 
 === 1.4.0 / 2009/10/30
 
